# AddonManager

./: .gitignore  .pre-commit-config.yaml  ALLOWED_PYTHON_PACKAGES.txt  Addon.py  AddonCatalog.py  AddonCatalog.schema.json  AddonCatalogCacheCreator.py  AddonManager.py  AddonManagerOptions.py  AddonManagerOptions.ui  CMakeLists.txt  Init.py  InitGui.py  MacroCacheCreator.py  MissingDependencies.ui  NetworkManager.py  PySideWrapper.py  PythonDependencyUpdateDialog.ui  README.md  TestAddonManagerApp.py  TestAddonManagerGui.py  addonmanager_cache.py  addonmanager_connection_checker.py  addonmanager_dependency_installer.py  addonmanager_devmode.py  addonmanager_devmode_add_content.py  addonmanager_devmode_license_selector.py  addonmanager_devmode_licenses_table.py  addonmanager_devmode_metadata_checker.py  addonmanager_devmode_people_table.py  addonmanager_devmode_person_editor.py  addonmanager_devmode_predictor.py  addonmanager_devmode_validators.py  addonmanager_firstrun.py  addonmanager_freecad_interface.py  addonmanager_git.py  addonmanager_gui_utilities.py  addonmanager_icon_utilities.py  addonmanager_installation_manifest.py  addonmanager_installer.py  (+47 more)
.github/workflows/: app-tests.yml  codeql.yml  qt5-tests.yml  qt6-tests.yml  sync_dev_to_main.yml
AddonManagerTest/: run_all_tests.py  run_app_tests.py  run_gui_tests.py
AddonManagerTest/app/: mocks.py  test_addon.py  test_addon_catalog_cache_creator.py  test_addoncatalog.py  test_cache.py  test_freecad_interface.py  test_git.py  test_installation_manifest.py  test_installer.py  test_licenses.py  test_macro.py  test_macro_cache_creator.py  test_macro_parser.py  test_metadata.py  test_path_utilities.py  test_python_deps.py  test_uninstaller.py  test_utilities.py  test_workers_startup.py
AddonManagerTest/data/: depends_on_all_workbenches.xml
AddonManagerTest/gui/: gui_mocks.py  test_change_branch.py  test_icon_utilities.py  test_installer_gui.py  test_python_deps_gui.py  test_toolbar_adapter.py  test_uninstaller_gui.py  test_update_all_gui.py  test_widget_addon_buttons.py  test_widget_filter_selector.py  test_widget_global_buttons.py  test_widget_package_details_view.py  test_widget_readme_browser.py  test_widget_search.py  test_widget_view_control_bar.py  test_widget_view_selector.py  test_workers_startup.py  test_workers_utility.py
Resources/: AddonManager.qrc  CMakeLists.txt
Resources/icons/: CMakeLists.txt
Resources/licenses/: CMakeLists.txt
Resources/translations/: AddonManager.ts  AddonManager_be.qm  AddonManager_be.ts  AddonManager_ca.qm  AddonManager_ca.ts  AddonManager_cs.qm  AddonManager_cs.ts  AddonManager_da.qm  AddonManager_de.qm  AddonManager_de.ts  AddonManager_el.qm  AddonManager_el.ts  AddonManager_es-AR.qm  AddonManager_es-AR.ts  AddonManager_es-CO.qm  AddonManager_es-CO.ts  AddonManager_es-ES.qm  AddonManager_es-ES.ts  AddonManager_es-VE.qm  AddonManager_es-VE.ts  AddonManager_eu.qm  AddonManager_eu.ts  AddonManager_fr.qm  AddonManager_fr.ts  AddonManager_hr.qm  AddonManager_hr.ts  AddonManager_hu.qm  AddonManager_hu.ts  AddonManager_it.qm  AddonManager_it.ts  AddonManager_ja.qm  AddonManager_ja.ts  AddonManager_ka.qm  AddonManager_ka.ts  AddonManager_pl.qm  AddonManager_pl.ts  AddonManager_pt-BR.qm  AddonManager_pt-BR.ts  AddonManager_ru.qm  AddonManager_ru.ts  (+14 more)
Widgets/: CMakeLists.txt  addonmanager_colors.py  addonmanager_utility_dialogs.py  addonmanager_widget_addon_buttons.py  addonmanager_widget_filter_selector.py  addonmanager_widget_global_buttons.py  addonmanager_widget_package_details_view.py  addonmanager_widget_progress_bar.py  addonmanager_widget_readme_browser.py  addonmanager_widget_search.py  addonmanager_widget_view_control_bar.py  addonmanager_widget_view_selector.py  spinner.py
